cmake_minimum_required(VERSION 3.14)
project(ffi_example)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
include(FetchContent)
set(BUILD_SHARED_LIBS ON)
set(INSTALL_DOCS OFF)
set(INSTALL_PKG_CONFIG_MODULE OFF)
set(INSTALL_CMAKE_PACKAGE_MODULE OFF)

FetchContent_Declare(Ogg
  SOURCE_DIR    "${CMAKE_CURRENT_SOURCE_DIR}/ogg"
  FIND_PACKAGE_ARGS NAMES Ogg
)
set(OPUS_BUILD_SHARED_LIBRARY ON)
set(OPUS_BUILD_TESTING OFF)
set(OPUS_CUSTOM_MODES OFF)
set(OPUS_BUILD_PROGRAMS OFF)
set(OPUS_DISABLE_INTRINSICS ON)
set(OPUS_FIXED_POINT ON)
set(OPUS_ENABLE_FLOAT_API OFF)
set(OPUS_FLOAT_APPROX OFF)
set(OPUS_INSTALL_PKG_CONFIG_MODULE OFF)
set(OPUS_INSTALL_CMAKE_CONFIG_MODULE OFF)
FetchContent_Declare(Opus
  SOURCE_DIR    "${CMAKE_CURRENT_SOURCE_DIR}/opus"
  FIND_PACKAGE_ARGS NAMES Opus
)

FetchContent_MakeAvailable(Ogg Opus)
set(OP_DISABLE_HTTP ON)
set(OP_DISABLE_FLOAT_API ON)
set(OP_FIXED_POINT ON)
set(OP_DISABLE_EXAMPLES ON)
set(OP_DISABLE_DOCS ON)
if(WIN32)
  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS  True)
endif()
set(CMAKE_SKIP_INSTALL_RULES True)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/opusfile")
set(CMAKE_SKIP_INSTALL_RULES False)